<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sample</string>
    <string name="label_signalName">Countersteer Rating</string>
    <string name="label_signal2Name">Drift Score</string>
    <string name="button_connect">Connect</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="button_selectDevice">Select Device</string>
    <string name="title_pairedDevices">Paired Devices</string>
</resources>
